test(forge): adapt channel benchmark fixture to Java 17